--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-h1{
+h1 {
     text-align: center;
-    
 }
 
-ul{
+ul {
     font-family: 'Courier New', Courier, monospace;
-    text-align: center;
     list-style-position: inside;
+    display: block;
+    padding: 4px;
+    width: fit-content;
+    text-align: center;
+    margin: auto; 
+} 
+
+li {
+    display: block;
+    margin: 8px;
+    border-style: outset;
+    border-color: black;
+    align-items: center;
 }
